# this-is-workbackup

Crud/: etablissment.txt  ets.c  ets.h  main.c  prog  stat  stat2  yess.c
Crud/project-transfusion/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  etablissement.txt  project-transfusion.glade.bak  project-transfusion.gladep  temporaryregion.txt
Crud/project-transfusion/autom4te.cache/: output.0  requests  traces.0  traces.1
Crud/project-transfusion/po/: Makefile  Makefile.in
Crud/project-transfusion/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  etablissement.txt  ets.c  ets.h  interface.c  interface.c.bak  interface.h  main.c  project-transfusion
Crud/project-transfusion/src/.deps/: callbacks.Po  ets.Po
